test_files/invalid/025-self-as-function-name.man
def self(x)
    return x
end

def main()
end
